[gd_scene load_steps=8 format=2]

[ext_resource path="res://assets/killer.png" type="Texture" id=1]
[ext_resource path="res://Brute/Brute.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 12.8543, 13.7164 )

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 1 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="CircleShape2D" id=3]
radius = 250.0

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 16.4713, 16.2421 )

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 16.4814, 5.28933 )

[node name="Brute" type="KinematicBody2D" groups=[
"evil",
]]
collision_layer = 2
collision_mask = 15
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 2 )

[node name="FOV" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 9

[node name="CollisionShape2D" type="CollisionShape2D" parent="FOV"]
shape = SubResource( 3 )

[node name="Hitbox" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 19

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
shape = SubResource( 5 )

[node name="Hurtbox" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hurtbox"]
position = Vector2( 7.62939e-06, -21.4541 )
shape = SubResource( 6 )
[connection signal="body_entered" from="FOV" to="." method="_on_FOV_body_entered"]
[connection signal="body_entered" from="Hitbox" to="." method="_on_Hitbox_body_entered"]
[connection signal="body_entered" from="Hurtbox" to="." method="_on_Hurtbox_body_entered"]
